--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Jekyll Theme
 email: your-email@example.com
 description: A Bootstrapped Jekyll Theme
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/atug" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
