--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,13 @@ title: An t-Ubhal-ghort
 email: chris@macmhicheil.uk
 description: A' toirt thugaibh na naidheachdan teicneòlais as ùire le fòcas àraidh air teicneòlas Apple
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://atug.uk" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:year/:month/:day/:title/
 
+# Pagination number
+plugins: [jekyll-paginate]
+paginate: 10
+paginate_path: /duilleag-:num/
 
 # Build settings
 markdown: kramdown
