--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -7,20 +7,20 @@ url: /roinn-seorsa/applaidean
 - title: Apple
 url: /roinn-seorsa/apple
 
-- title: Gidhlig
-url: /roinn-seorsa/blog
+- title: Eadar-lìon
+url: /roinn-seorsa/eadar-lion
 
-- title: Blog
-url: /roinn-seorsa/blog
+- title: Gàidhlig
+url: /roinn-seorsa/gaidhlig
 
-- title: Blog
-url: /roinn-seorsa/blog
+- title: Google
+url: /roinn-seorsa/google
 
-- title: Blog
-url: /roinn-seorsa/blog
+- title: LCDTQE+
+url: /roinn-seorsa/lcdtqe
 
-- title: Blog
-url: /roinn-seorsa/blog
+- title: Microsoft
+url: /roinn-seorsa/microsoft
 
 - title: Blog
   url: /roinn-seorsa/blog
