--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -1,32 +1,32 @@
-title: "Dachaigh"
+- title: Dachaigh
   url: /
 
-title: "Applaidean"
+- title: Applaidean
   url: /roinn-seorsa/applaidean
 
-title: "Apple"
+- title: Apple
   url: /roinn-seorsa/apple
 
-title: "Eadar-lìon"
+- title: Eadar-lìon
   url: /roinn-seorsa/eadar-lion
 
-title: "Gàidhlig"
+- title: Gàidhlig
   url: /roinn-seorsa/gaidhlig
 
-title: "Google"
+- title: Google
   url: /roinn-seorsa/google
 
-title: "LCDTQE+"
+- title: LCDTQE+
   url: /roinn-seorsa/lcdtqe
 
-title: "Microsoft"
+- title: Microsoft
   url: /roinn-seorsa/microsoft
 
-title: "Blog"
+- title: Blog
   url: /roinn-seorsa/blog
 
-title: "Mar Deidhinn"
+- title: Mar Deidhinn
   url: /mar-deidhinn
 
-title: "Lorg"
+- title: Lorg"
   url: /lorg
