--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -4,40 +4,40 @@
 
 - title: Applaidean
   url: /roinn-seorsa/applaidean
-  description:
+  description: Postaichean mu applaidean
 
 - title: Apple
   url: /roinn-seorsa/apple
-  description:
+  description: Postaichean mu Apple
 
 - title: Eadar-lìon
   url: /roinn-seorsa/eadar-lion
-  description: 
+  description: Postaichean mun eadar-lìon
 
 - title: Gàidhlig
   url: /roinn-seorsa/gaidhlig
-  description:
+  description:  Postaichean mu theicneòlas a bheireas buaidh air coimhearsnachd na Gàidhlig
 
 - title: Google
   url: /roinn-seorsa/google
-  description:
+  description: Postaichean mu Ghoogle
 
 - title: LCDTQE+
   url: /roinn-seorsa/lcdtqe
-  description:
+  description: Postaichean mu theicneòlas a bheireas buaidh air a' choimhearsnachd LCDTQE+
 
 - title: Microsoft
   url: /roinn-seorsa/microsoft
-  description:
+  description: Postaichean mu theicneòlas Microsoft
 
 - title: Blog
   url: /roinn-seorsa/blog
-  description:
+  description: Postaichean a bhuineas ri AtUG fèin
 
 - title: Mar Deidhinn
   url: /mar-deidhinn
-  description:
+  description: Mar deidhinn
 
 - title: Lorg
   url: /lorg
-  description:
+  description: Lorg sna postaichean
