--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -1,6 +1,6 @@
 - title: <i class="fas fa-home"></i>
   url: /
-  description:
+  description: Dachaigh
 
 - title: Applaidean
   url: /roinn-seorsa/applaidean
